Add taco soup recipe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/salmon.html">Lemon-Garlic Air Fryer Salmon</a>
+  <ul>
+    <li><a href="recipes/salmon.html">Lemon-Garlic Air Fryer Salmon</a></li>
+    <li><a href="recipes/taco-soup.html">Creamy Keto Taco Soup with Ground Beef</a></li>
+  </ul>
 </body>
 
 </html>
