--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li><a href="recipes/salmon.html">Lemon-Garlic Air Fryer Salmon</a></li>
     <li><a href="recipes/taco-soup.html">Creamy Keto Taco Soup with Ground Beef</a></li>
+    <li><a href="recipes/chicken-parmesan.html">Keto Chicken Parmesan</a></li>
   </ul>
 </body>
 
